Added setting to rerun jobs on failure.

--- a/generate-gvcf/nextflow.config
+++ b/generate-gvcf/nextflow.config
@@ -31,6 +31,9 @@ profiles {
         process.executor = 'pbs'
         process.queue = 'batch'
         process.time = 96.h
+        process.errorStrategy = 'retry'
+	process.maxRetries = 5
+	process.maxErrors = 1000
         process.clusterOptions = '-M gerrit.botha@uct.ac.za -m abe'
     }
 }
